--- a/src/css/container.css
+++ b/src/css/container.css
@@ -12,8 +12,9 @@
   }
 }
 /* Styles for Desktop devices */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
   .container {
-    max-width: 1200px;
+    max-width: 1158px;
+    padding: 0 15px;
   }
 }
