--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,3 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
@@ -12,7 +6,10 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
+@import url('./hero.css');
+@import url('./features.css');
+@import url('./team.css');
+@import url('./portfolio.css');
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
